--- a/aide.ui
+++ b/aide.ui
@@ -45,7 +45,7 @@
      <property name="title">
       <string>New File</string>
      </property>
-     <addaction name="actionAssembly_x86"/>
+     <addaction name="ActionAssembly_x86"/>
     </widget>
     <addaction name="menuNew_File"/>
     <addaction name="ActionExit"/>
@@ -77,12 +77,22 @@
    <addaction name="MenuABOUT"/>
   </widget>
   <widget class="QToolBar" name="ToolBar">
+   <property name="iconSize">
+    <size>
+     <width>30</width>
+     <height>30</height>
+    </size>
+   </property>
+   <property name="toolButtonStyle">
+    <enum>Qt::ToolButtonIconOnly</enum>
+   </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
    </attribute>
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
+   <addaction name="ActionAssembly_x86"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="ActionExit">
@@ -90,7 +100,11 @@
     <string>Exit</string>
    </property>
   </action>
-  <action name="actionAssembly_x86">
+  <action name="ActionAssembly_x86">
+   <property name="icon">
+    <iconset resource="aide_resource.qrc">
+     <normaloff>:/images/images/new_file.png</normaloff>:/images/images/new_file.png</iconset>
+   </property>
    <property name="text">
     <string>Assembly(x86)</string>
    </property>
