--- a/aide_resource.qrc
+++ b/aide_resource.qrc
@@ -3,5 +3,6 @@
         <file>images/AIDE_Button_Small.png</file>
         <file>images/AIDE_Icon_small.png</file>
         <file>images/new_file.png</file>
+        <file>images/Open.png</file>
     </qresource>
 </RCC>
