Dynamic file Icons on load

--- a/projectexplorer.ui
+++ b/projectexplorer.ui
@@ -45,13 +45,18 @@
         </property>
         <property name="iconSize">
          <size>
-          <width>32</width>
-          <height>32</height>
+          <width>18</width>
+          <height>18</height>
          </size>
         </property>
         <property name="headerHidden">
          <bool>true</bool>
         </property>
+        <column>
+         <property name="text">
+          <string notr="true">1</string>
+         </property>
+        </column>
        </widget>
       </item>
      </layout>
