--- a/projectexplorer.ui
+++ b/projectexplorer.ui
@@ -34,6 +34,9 @@
       </item>
       <item>
        <widget class="QTreeWidget" name="TreeWidget">
+        <property name="contextMenuPolicy">
+         <enum>Qt::CustomContextMenu</enum>
+        </property>
         <property name="alternatingRowColors">
          <bool>true</bool>
         </property>
