--- a/projectexplorer.ui
+++ b/projectexplorer.ui
@@ -24,13 +24,7 @@
        <number>2</number>
       </property>
       <item>
-       <widget class="QComboBox" name="ProjectSelector">
-        <item>
-         <property name="text">
-          <string>Current Project ()</string>
-         </property>
-        </item>
-       </widget>
+       <widget class="QComboBox" name="ProjectSelector"/>
       </item>
       <item>
        <widget class="QTreeWidget" name="TreeWidget">
